gate (0.0.2) unstable; urgency=low

  * #1 - don't paste newline
  * #2 - port merge

 -- Cyril Adrian <cyril.adrian@gmail.com>  Fri, 01 Feb 2013 09:19:47 +0100

gate (0.0.1) unstable; urgency=low

  * Initial Release.

 -- Cyril Adrian <cyril.adrian@gmail.com>  Thu, 31 Jan 2013 18:31:26 +0100